# anyfs-backend

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LLM_CONTEXT.md  README.md  ci-local.ps1  ci-local.sh
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci.yml  release.yml  security.yml  semver.yml
book/: book.toml
book/src/getting-started/: quick-start.md
book/src/reference/: errors.md  types.md
docs/: 404.html  book.toml  index.html  print.html  searcher-c2a407aa.js  searchindex-73facf0e.js  toc-e4cbe513.js  toc.html
docs/getting-started/: quick-start.html  trait-hierarchy.html
docs/reference/: errors.html  types.html
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: quick-start.md  trait-hierarchy.md
docs/src/reference/: types.md
docs/tutorials/backend/: 01-data-structures.html  02-fs-read.html  03-fs-write.html  04-fs-dir.html  05-fs-trait.html  06-fs-link.html  07-fs-full.html  08-fs-inode.html  09-fs-posix.html  index.html
docs/tutorials/middleware/: 01-layer-pattern.html  02-logging-layer.html  03-metrics-layer.html  04-caching-layer.html  05-access-control.html  06-composing-layers.html  index.html
examples/: basic_usage.rs  generic_functions.rs  inmemory_fs.rs  layer_middleware.rs
src/: error.rs  ext.rs  layer.rs  lib.rs  markers.rs  path_resolver.rs  types.rs
src/traits/: fs_dir.rs  fs_handles.rs  fs_inode.rs  fs_link.rs  fs_lock.rs  fs_path.rs  fs_permissions.rs  fs_read.rs  fs_stats.rs  fs_sync.rs  fs_write.rs  fs_xattr.rs  mod.rs
tests/: integration.rs
(+26 files in other folders)
