[package]
name = "anyfs-backend"
version = "0.1.0"
edition = "2024"
description = "Core traits and types for the AnyFS pluggable virtual filesystem standard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/anyfs-backend"
keywords = ["filesystem", "virtual", "vfs", "traits"]
categories = ["filesystem", "development-tools"]
rust-version = "1.85"

[dependencies]
thiserror = "2"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[features]
default = []
serde = ["dep:serde"]

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
