[package]
name = "anyfs-backend"
version = "0.1.0-pre.1"
edition = "2021"
description = "Core traits and types for the AnyFS pluggable virtual filesystem standard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/anyfs-backend"
keywords = ["filesystem", "virtual", "vfs", "traits"]
categories = ["filesystem", "development-tools"]
rust-version = "1.68"

[dependencies]
thiserror = "2"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
